# uai_rebuttals

./: .gitignore  AGENTS.md  BASELINE_CODEBASE_IMPLEMENTATION_NOTES.md  EXPERIMENT_REPORT.md  README.md  hero_rebuttal.md  uai_reviews.md
.workspace/rebuttals/: response_budget_notes.md
code/: README_rebuttal_redesign.md
code/AnyhowCP-uai-2026-submission/: .gitignore  README.md  pyproject.toml
code/AnyhowCP-uai-2026-submission/configs/: base_100_g21.yaml  base_30_g21.yaml  main_experiments.yaml  pilot_experiments.yaml  rebuttal_expanded_g21.yaml  rebuttal_many_seed_g21.yaml  rebuttal_protocol_regression_100_g21.yaml  rebuttal_template.yaml  smoke_experiments.yaml  toy.yaml
code/AnyhowCP-uai-2026-submission/scripts/: gaussian_exact_check.py  plan_rebuttal_experiments.py  run_paper_experiments.py  summarize_experiment_results.py  synthetic_gaussian_empirical_forecast.py  toy_check.py  write_combined_rebuttal_report.py  write_experiment_report.py
code/AnyhowCP-uai-2026-submission/src/anyhowcp/: __init__.py  conformal.py  costs.py  experiments.py  forecast.py  masks.py  metrics.py  replanning.py  solvers.py  toy.py
paper/: .gitignore  appendix_figures.tex  main.tex  references.bib
paper/attic/: clean_logs.sh  main25Feb0023.tex  main25feb0025.tex  main_newexp.tex  main_newexp2.tex  old_main.tex  regret_note.tex
paper/rebuttals/: experimental_design.md  integrated_rebuttal_draft.md  per_reviewer_rebuttal_drafts.md  reviewer_1.md  reviewer_2.md  reviewer_3.md  reviewer_4.md  reviewer_5.md  reviewer_D6dM_technical.md  reviewer_Me2Q_technical.md  (+3 more)
(+21 files in other folders)
